reading historical data and algorithm can be set (commented)